update JWT/check
